# phantom-chase

./: .env.example  .gitignore  Makefile  README.md  bun.lockb  deploy.sh  index.html  package-lock.json  package.json  vite.config.ts
circuits/commitment/: Nargo.toml
circuits/jungle_move/: Nargo.toml
circuits/search_response/: Nargo.toml
contracts/ultrahonk-soroban-contract/: Cargo.toml
contracts/zk-hunt/: Cargo.toml
contracts/zk-hunt/src/: lib.rs  test.rs
contracts/zk-hunt/test_snapshots/test/: test_auto_increment_session_ids.1.json  test_full_match_prey_wins_all.1.json  test_game_not_found.1.json  test_hunter_catches_prey_round1_then_prey_survives_rest.1.json  test_hunter_catches_visible_prey.1.json  test_hunter_move_out_of_bounds.1.json  test_hunter_move_too_far.1.json  test_hunter_move_wrong_phase.1.json  test_hunter_search_requires_hidden_prey.1.json  test_join_wrong_phase.1.json  test_multiple_sessions.1.json  test_prey_enter_jungle_already_hidden.1.json  test_prey_exit_jungle_not_hidden.1.json  test_prey_move_jungle_not_hidden.1.json  test_prey_survives_10_turns.1.json  test_prey_survives_10_turns_advances_round.1.json  test_role_swap_at_halfway.1.json  test_role_swap_at_round3.1.json  test_search_plains_rejected.1.json
public/circuits/: commitment.json  jungle_move.json  jungle_move_vk.json  search_response.json  search_response_vk.json
src/: App.tsx  main.tsx
src/components/: GameControls.tsx  GameHUD.tsx  GameLobby.tsx  GameView.tsx  HowToPlay.tsx  NetworkPill.tsx  NetworkSwitcher.tsx  TileContextMenu.tsx  TopBar.tsx  WalletButton.tsx
(+30 files in other folders)
